--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.4.0",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "jose": "^5.6.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
@@ -36,6 +39,7 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1",
     "ts-jose": "^5.6.3"
   },
   "devDependencies": {
